force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Container_Quote_Price__c.field-meta.xml
<CustomField>
    <fullName>Container_Quote_Price__c</fullName>
    <label>Container Quote Price</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>