force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Multiplier_Fired__c.field-meta.xml
<CustomField>
    <fullName>Discount_Multiplier_Fired__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discount Multiplier Fired?</label>
    <type>Checkbox</type>
</CustomField>