force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Install_Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Install_Location_Type__c</fullName>
    <label>Install Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ceiling</fullName>
            </value>
            <value>
                <fullName>Wall</fullName>
            </value>
            <value>
                <fullName>Post</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>