force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Item_Location__c.field-meta.xml
<CustomField>
    <fullName>Item_Location__c</fullName>
    <label>Item Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>North</fullName>
            </value>
            <value>
                <fullName>South</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>