force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Commission_Dollars__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Commission_Dollars__c</fullName>
    <formula>KCPQ_Container_Cost__c  *  KCPQ_Commission_Percentage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Dollars</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>