force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Commission_Percentage__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Commission_Percentage__c</fullName>
    <formula>SBQQ__Product__r.KCPQ_Commission_Pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Commission Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>