force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Container_ASP__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Container_ASP__c</fullName>
    <label>Container ASP</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>