force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Container_Cost__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Container_Cost__c</fullName>
    <formula>SBQQ__Cost__r.KCPQ_SupplierFirst_Cost__c  +  KCPQ_Import_Cost__c  +  KCPQ_Customs_Duty__c  +  KCPQ_Overseas_Freight__c  +  Material_Handling_OH_Estimate_of_MA__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>