force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Container_Margin_by_item__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Container_Margin_by_item__c</fullName>
    <formula>(Container_Quote_Price__c  -  KCPQ_Container_Cost__c  -  KCPQ_Commission_Dollars__c ) /  Container_Quote_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Container Margin % by item</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>