force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Container_Size__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Container_Size__c</fullName>
    <label>Container Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>