force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Customs_Duty__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Customs_Duty__c</fullName>
    <formula>SBQQ__Cost__r.KCPQ_SupplierFirst_Cost__c  * 0.044</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customs/Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>