force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Discontinue_Date__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Discontinue_Date__c</fullName>
    <formula>SBQQ__Product__r.KCPQ_Discontinue_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discontinue Date</label>
    <type>Date</type>
</CustomField>