force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Discount_Multiplier__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Discount_Multiplier__c</fullName>
    <label>Discount Multiplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>