force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Extended_container_line_total__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Extended_container_line_total__c</fullName>
    <formula>SBQQ__Quantity__c  *  SBQQ__Quote__r.KCPQ_Quote_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended container line total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>