force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Extended_Container_Total__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Extended_Container_Total__c</fullName>
    <formula>TEXT( KCPQ_Extended_Cubic_Ft__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Container Total</label>
    <type>Text</type>
</CustomField>