force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Extended_Cubic_Ft__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Extended_Cubic_Ft__c</fullName>
    <formula>KCPQ_Qty_ordered__c  *  KCPQ_Item_Cubic_Ft_Dimension__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Cubic Ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>