force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Extended_Zone_Price__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Extended_Zone_Price__c</fullName>
    <formula>(KCPQ_Zone__c * SBQQ__Quantity__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended Zone Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>