force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Finish_Color__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Finish_Color__c</fullName>
    <label>Finish Color</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>White</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>