force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Freight__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Freight__c</fullName>
    <label>Freight %</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>