force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Freight_Rate__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Freight_Rate__c</fullName>
    <label>Freight Rate</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>