force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Gross_Discount__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Gross_Discount__c</fullName>
    <formula>(SBQQ__ListPrice__c - SBQQ__NetPrice__c )/ SBQQ__ListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Gross Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>