force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Import_Cost__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Import_Cost__c</fullName>
    <formula>SBQQ__Cost__r.KCPQ_SupplierFirst_Cost__c  * 0.034</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>