force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Item_Cubic_Ft_Dimension__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Item_Cubic_Ft_Dimension__c</fullName>
    <label>Item Cubic Ft Dimension</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>