force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Location_ABC__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Location_ABC__c</fullName>
    <label>Location ABC</label>
    <length>150</length>
    <type>Text</type>
</CustomField>