force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Material_Handling_Estimate_Purchasi__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Material_Handling_Estimate_Purchasi__c</fullName>
    <formula>SBQQ__Cost__r.KCPQ_SupplierFirst_Cost__c  * 0.016</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Handling / Estimate Purchasi</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>