force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_MOQ__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_MOQ__c</fullName>
    <description>Minimum Order Quantity from Item Inventory</description>
    <inlineHelpText>Minimum Order Quantity</inlineHelpText>
    <label>MOQ</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>