force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_MSRP__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_MSRP__c</fullName>
    <formula>SBQQ__NetPrice__c *3</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MSRP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>