force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Net_Margin__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Net_Margin__c</fullName>
    <formula>(((SBQQ__Cost__r.SBQQ__UnitCost__c /SBQQ__NetPrice__c )-1)*-1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>