force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Net_Product_Quantity__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Net_Product_Quantity__c</fullName>
    <formula>SBQQ__Product__r.KCPQ_Net_Inventory_Available__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Product Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>