force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Net_Quoted_Sales__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Net_Quoted_Sales__c</fullName>
    <label>Net Quoted Sales</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>