force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Overall_Container_Margin__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Overall_Container_Margin__c</fullName>
    <label>Overall Container Margin</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>