force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Overseas_Freight__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Overseas_Freight__c</fullName>
    <formula>SBQQ__Cost__r.KCPQ_SupplierFirst_Cost__c  *  KCPQ_Freight_Rate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Overseas Freight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>