force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Price_Family__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Price_Family__c</fullName>
    <label>Price Family</label>
    <length>50</length>
    <type>Text</type>
</CustomField>