force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Pricing_Intelligence__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Pricing_Intelligence__c</fullName>
    <label>Pricing Intelligence</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>