force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Pricing_Library__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Pricing_Library__c</fullName>
    <label>Pricing Library</label>
    <length>100</length>
    <type>Text</type>
</CustomField>