force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Product_Category__c</fullName>
    <formula>SBQQ__Product__r.SBQQ_Product_Category__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Category</label>
    <type>Text</type>
</CustomField>