force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Product_Status__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Product_Status__c</fullName>
    <formula>TEXT(SBQQ__Product__r.KCPQ_Product_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Status</label>
    <type>Text</type>
</CustomField>