force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_QLI_Unique_Identifier__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_QLI_Unique_Identifier__c</fullName>
    <label>QLI Unique Identifier</label>
    <length>150</length>
    <type>Text</type>
</CustomField>