force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Qty_ordered__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Qty_ordered__c</fullName>
    <label>Qty ordered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>