force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Quote_Guidelines1__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Quote_Guidelines1__c</fullName>
    <label>Quote Guidelines1</label>
    <length>200</length>
    <type>Text</type>
</CustomField>