force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Quote_Guidelines__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Quote_Guidelines__c</fullName>
    <formula>SBQQ__Product__r.KCPQ_Quote_Guidelines__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Guidelines</label>
    <type>Text</type>
</CustomField>