force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Release_Date__c</fullName>
    <formula>SBQQ__Product__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Release Date</label>
    <type>Date</type>
</CustomField>