force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Requested_Date__c</fullName>
    <label>Requested Date</label>
    <type>DateTime</type>
</CustomField>