force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Shade_Size__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Shade_Size__c</fullName>
    <label>Shade Size</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>8&quot;</fullName>
            </value>
            <value>
                <fullName>10&quot;</fullName>
            </value>
            <value>
                <fullName>12&quot;</fullName>
            </value>
            <value>
                <fullName>14&quot;</fullName>
            </value>
            <value>
                <fullName>16&quot;</fullName>
            </value>
            <value>
                <fullName>18&quot;</fullName>
            </value>
            <value>
                <fullName>20&quot;</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>