force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Target_Price__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Target_Price__c</fullName>
    <label>Target Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>