force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Total_Cost__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Total_Cost__c</fullName>
    <formula>SBQQ__UnitCost__c * SBQQ__Quantity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>