force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Unit_Price__c</fullName>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>