force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Zone__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Zone__c</fullName>
    <label>Zone Pricing</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>