force-app/main/default/objects/SBQQ__QuoteLine__c/fields/KCPQ_Zone_Price_Updated__c.field-meta.xml
<CustomField>
    <fullName>KCPQ_Zone_Price_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Zone Price Updated</label>
    <type>Checkbox</type>
</CustomField>