force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MAP_Price__c.field-meta.xml
<CustomField>
    <fullName>MAP_Price__c</fullName>
    <formula>SBQQ__NetPrice__c * SBQQ__Product__r.KCPQ_IMAP_Multipler__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MAP Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>