force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Material_Handling_OH_Estimate_of_MA__c.field-meta.xml
<CustomField>
    <fullName>Material_Handling_OH_Estimate_of_MA__c</fullName>
    <formula>SBQQ__Cost__r.KCPQ_SupplierFirst_Cost__c  * 0.037</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material Handling / OH Estimate of MA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>