force-app/main/default/objects/SBQQ__QuoteLine__c/fields/RLM_Shade__c.field-meta.xml
<CustomField>
    <fullName>RLM_Shade__c</fullName>
    <label>RLM Shade Style Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Angle</fullName>
            </value>
            <value>
                <fullName>Deep Bowl</fullName>
            </value>
            <value>
                <fullName>Shallow Classic</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>