force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ__ContractedPrice__c.field-meta.xml
<CustomField>
    <fullName>SBQQ__ContractedPrice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Contracted price if the product has negotiated pricing for opportunity&apos;s account. Contracted Prices are available on the Account and can be applied to any product in any price book.</description>
    <inlineHelpText>Contracted price if the product has negotiated pricing for the opportunity&apos;s account. Contracted Prices are available on the Account and can be applied to any product in any price book.</inlineHelpText>
    <label>Contracted Price</label>
    <referenceTo>SBQQ__ContractedPrice__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>