force-app/main/default/objects/SBQQ__QuoteLine__c/fields/SBQQ_Finish__c.field-meta.xml
<CustomField>
    <fullName>SBQQ_Finish__c</fullName>
    <label>Finish</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>White</fullName>
            </value>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Brushed Nickel</fullName>
            </value>
            <value>
                <fullName>Dore Bronze</fullName>
            </value>
            <value>
                <fullName>Antique Pewter</fullName>
            </value>
            <value>
                <fullName>Anvil Iron</fullName>
            </value>
            <value>
                <fullName>Brushed Pewter</fullName>
            </value>
            <value>
                <fullName>Canyon View</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>