force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Supplier_Vendor_Name__c.field-meta.xml
<CustomField>
    <fullName>Supplier_Vendor_Name__c</fullName>
    <formula>SBQQ__Quote__r.SBQQ__Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier/Vendor Name</label>
    <type>Text</type>
</CustomField>