force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Zone_List_Price__c.field-meta.xml
<CustomField>
    <fullName>Zone_List_Price__c</fullName>
    <formula>SBQQ__ListPrice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>KCPQ_Zone/List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>